# hello-langflow-py

./: .dockerignore  .env.ai.azure.local.example  .env.langflow.local.example  .gitignore  .python-versions  Dockerfile  Dockerfile.example  HISTORY.md  README.md  docker-compose.yml  docker.env.example  main.py  poe_tasks.toml  pyproject.toml  requirements.frozen.txt  requirements.uv.tool.txt
.github/workflows/: always.yml
assets/agents/simple_agent/: langflow.json
assets/backup/: langflow.json
containers/langflow/: README.md
containers/langflow/app/: .gitignore
env/: example.src.sh  local.src.sh.example
scripts/smoke_tests/: hello.ba.sh
src/hello_langflow/agents/azure/components/chat/: output.as-is.py
src/hello_langflow/agents/azure/components/models/lc/: azure_chat_openai.as-is.py
src/hello_langflow/components/: prompt.as-is.py
src/hello_langflow/smoke_tests/: hello_world.py
