[project]
name = "hello-langflow-py"
version = "0.1.0"
description = "Getting Started w/ LangFlow"
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "langflow>=1.5.1,<2.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2.0",
    "ruff>=0.12.11,<0.13",
]


[tool.pyright]
venvPath = "."
venv = ".venv"
defineConstant = { DEBUG = true }
typeCheckingMode = "strict"
include = ["src"]
strict = ["src"]
stubPath = "typings"
# ignore = ["src/oldstuff"] # NOTE what is the difference between exclude and ignore?
exclude = [
    ".venv",
    "typings",
    "**/node_modules",
    "**/__pycache__",
    "**/test*.py",
    "**/*.as-is.py"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/hello_langflow"
]
